force-app/main/default/objects/SAP_Staging__c/SAP_Staging__c.object-meta.xml
<CustomObject>
    <label>SAP Staging</label>
    <nameField>
        <displayFormat>D-{0}</displayFormat>
        <label>SAP Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAP Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>