force-app/main/default/objects/SAP_Staging__c/fields/CondPUnt__c.field-meta.xml
<CustomField>
    <fullName>CondPUnt__c</fullName>
    <label>CondPUnt</label>
    <length>5</length>
    <type>Text</type>
</CustomField>