force-app/main/default/objects/SAP_Staging__c/fields/CondUnit__c.field-meta.xml
<CustomField>
    <fullName>CondUnit__c</fullName>
    <label>CondUnit</label>
    <length>3</length>
    <type>Text</type>
</CustomField>