force-app/main/default/objects/SAP_Staging__c/fields/ContEndDate__c.field-meta.xml
<CustomField>
    <fullName>ContEndDate__c</fullName>
    <label>ContEndDate</label>
    <type>Date</type>
</CustomField>