force-app/main/default/objects/SAP_Staging__c/fields/Deal_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Created_Date__c</fullName>
    <label>Deal Created Date</label>
    <type>DateTime</type>
</CustomField>