force-app/main/default/objects/SAP_Staging__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <formula>TEXT(Year(ContEndDate__c))+&apos;&apos;+
CASE(MONTH(ContEndDate__c),1,&quot;01&quot;,2,&quot;02&quot;,3,&quot;03&quot;,4,&quot;04&quot;,5,&quot;05&quot;,6,&quot;06&quot;,7,&quot;07&quot;,8,&quot;08&quot;,9,&quot;09&quot;,TEXT(MONTH(ContEndDate__c)))+&apos;&apos;+
CASE(DAY(ContEndDate__c),1,&quot;01&quot;,2,&quot;02&quot;,3,&quot;03&quot;,4,&quot;04&quot;,5,&quot;05&quot;,6,&quot;06&quot;,7,&quot;07&quot;,8,&quot;08&quot;,9,&quot;09&quot;,TEXT(DAY(ContEndDate__c)))</formula>
    <label>EndDate</label>
    <type>Text</type>
</CustomField>