force-app/main/default/objects/SAP_Staging__c/fields/Instance_URL__c.field-meta.xml
<CustomField>
    <fullName>Instance_URL__c</fullName>
    <label>Instance URL</label>
    <length>10</length>
    <type>Text</type>
</CustomField>