force-app/main/default/objects/SAP_Staging__c/fields/MaterialNo__c.field-meta.xml
<CustomField>
    <fullName>MaterialNo__c</fullName>
    <label>MaterialNo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>