force-app/main/default/objects/SAP_Staging__c/fields/OLF_Deal_Number__c.field-meta.xml
<CustomField>
    <fullName>OLF_Deal_Number__c</fullName>
    <label>OLF Deal Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>