force-app/main/default/objects/SAP_Staging__c/fields/OLF_Response__c.field-meta.xml
<CustomField>
    <fullName>OLF_Response__c</fullName>
    <description>Response received from OLF after GSAP contract number and Load Id</description>
    <label>OLF Response</label>
    <type>TextArea</type>
</CustomField>