force-app/main/default/objects/SAP_Staging__c/fields/PO_Type__c.field-meta.xml
<CustomField>
    <fullName>PO_Type__c</fullName>
    <label>PO Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>