force-app/main/default/objects/SAP_Staging__c/fields/PriceInd__c.field-meta.xml
<CustomField>
    <fullName>PriceInd__c</fullName>
    <label>PriceInd</label>
    <length>10</length>
    <type>Text</type>
</CustomField>