force-app/main/default/objects/SAP_Staging__c/fields/QuantityUom__c.field-meta.xml
<CustomField>
    <fullName>QuantityUom__c</fullName>
    <label>QuantityUom</label>
    <length>3</length>
    <type>Text</type>
</CustomField>