force-app/main/default/objects/SAP_Staging__c/fields/RV_SAPSHT_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>RV_SAPSHT_ExternalID__c</fullName>
    <description>This field is used to store the ID of its related SHT.</description>
    <externalId>true</externalId>
    <inlineHelpText>This field is used to store the ID of its related SHT.</inlineHelpText>
    <label>RV SAPSHT ExternalID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>