force-app/main/default/objects/SAP_Staging__c/fields/Sent_to_OLF__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_OLF__c</fullName>
    <label>Sent to OLF?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>