force-app/main/default/objects/SAP_Staging__c/fields/Ship_TO_Name__c.field-meta.xml
<CustomField>
    <fullName>Ship_TO_Name__c</fullName>
    <label>Ship TO Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>