force-app/main/default/objects/SAP_Staging__c/fields/SHT_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>SHT_Transaction_Id__c</fullName>
    <label>SHT Transaction Id</label>
    <length>12</length>
    <type>Text</type>
</CustomField>