force-app/main/default/objects/SAP_Staging__c/fields/SoldToName__c.field-meta.xml
<CustomField>
    <fullName>SoldToName__c</fullName>
    <label>SoldToName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>