force-app/main/default/objects/SAP_Staging__c/fields/StatusInd__c.field-meta.xml
<CustomField>
    <fullName>StatusInd__c</fullName>
    <formula>IF( CreationInd__c ==&apos;C&apos;, &apos;Creation&apos;, &apos;Cancellation&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StatusInd</label>
    <type>Text</type>
</CustomField>