force-app/main/default/objects/SAP_Staging__c/listViews/All_SOM.listView-meta.xml
<ListView>
    <fullName>All_SOM</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>SfHeaderShtNo__c</columns>
    <columns>Error_Processing_to_GSAP__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CreationInd__c</columns>
    <columns>SalesPrice__c</columns>
    <columns>SapMrcNo__c</columns>
    <columns>SfItemShtNo__c</columns>
    <columns>SapSalesContNo__c</columns>
    <columns>SHTId__c</columns>
    <columns>SHT_Transaction_Id__c</columns>
    <columns>Processing_Indicator__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All (SOM)</label>
</ListView>